@@ -97,7 +97,9 @@ ICEDTEA_ENV = \
 	"LIBFFI_CFLAGS=$(LIBFFI_CFLAGS)" \
 	"LIBFFI_LIBS=$(LIBFFI_LIBS)" \
 	"FREETYPE2_HEADERS=$(FREETYPE2_CFLAGS)" \
-	"FT2_LIB=$(FREETYPE2_LIBS)"
+	"FT2_LIB=$(FREETYPE2_LIBS)" \
+	"ALT_PARALLEL_COMPILE_JOBS=$(PARALLEL_JOBS)" \
+	"HOTSPOT_BUILD_JOBS=$(PARALLEL_JOBS)"
 
 if WITH_CACAO
 ICEDTEA_ENV += \
@@ -152,7 +154,9 @@ ICEDTEA_ENV_ECJ = \
 	"LIBFFI_CFLAGS=$(LIBFFI_CFLAGS)" \
 	"LIBFFI_LIBS=$(LIBFFI_LIBS)" \
 	"FREETYPE2_HEADERS=$(FREETYPE2_CFLAGS)" \
-	"FT2_LIB=$(FREETYPE2_LIBS)"
+	"FT2_LIB=$(FREETYPE2_LIBS)" \
+	"ALT_PARALLEL_COMPILE_JOBS=$(PARALLEL_JOBS)" \
+	"HOTSPOT_BUILD_JOBS=$(PARALLEL_JOBS)"
 
 if WITH_CACAO
 ICEDTEA_ENV_ECJ += \
