@@ -1,3 +1,15 @@
+2008-04-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Pass ALT_PARALLEL_COMPILE_JOBS and
+	HOTSPOT_BUILD_JOBS to ICEDTEA_ENV
+	and ICEDTEA_ENV_ECJ as configured.
+	* Makefile.in,
+	* configure:
+	Updated.
+	* configure.ac:
+	Add --with-parallel-jobs=x option.
+	
 2008-04-12  Mark Wielaard  <mark@klomp.org>
 
 	* Makefile.am: Updated to OpenJDK b09 release.
